--- a/nginx/conf.d/mastodon.conf
+++ b/nginx/conf.d/mastodon.conf
@@ -2,13 +2,12 @@ server {
   listen 80;
   listen [::]:80;
 
-  root /lebase; 
-  index index.html index.htm;
-
   server_name hathaway.social;
+  server_tokens off;
 
-  location ~ /.well-known/acme-challenge {
-    try_files $uri $uri/ =404;
+  location /.well-known/acme-challenge {
+    root /var/www/certbot;
+    # try_files $uri $uri/ =404;
   }
 
   location / {
@@ -22,19 +21,19 @@ server {
   root /mnt/none;
   index index.html index.htm;
 
-  server_name mastodon.headsoft.net; # Replace with your domain name
-
+  server_name hathaway.social;
 
   ssl on;
 
-  # Replace your domain in these paths
-  ssl_certificate      /etc/letsencrypt/live/mastodon.headsoft.net/fullchain.pem;
-  ssl_certificate_key  /etc/letsencrypt/live/mastodon.headsoft.net/privkey.pem;
+  ssl_certificate      /etc/nginx/ssl/live/hathaway.social/fullchain.pem;
+  ssl_certificate_key  /etc/nginx/ssl/live/hathaway.social/privkey.pem;
 
   ssl_session_timeout  5m;
   ssl_prefer_server_ciphers On;
   ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
 
+
+  client_max_body_size 100M;
 
   absolute_redirect off;
   server_name_in_redirect off;
